--- a/css/style.css
+++ b/css/style.css
@@ -3,27 +3,28 @@
     src: url(../fonts/ArchivoNarrow-Bold.otf);
 }
 
-
-
-
 .container {
     max-width: 1140px;
     display: block;
     margin: 0 auto;
     padding: 1em 0em;
-   } 
+} 
 
 
 .row {
     margin-right:0;
     margin-left: 0;
 }
+.body{
+    background:url(../images/madera.jpg);
+    margin: 0;
 
+}
 #logo{
     width: 68%;
     margin: .5em;
-
 }
+
 #titulo{
 	background: url(../images/Cabeza.jpg);
 	background-size:cover;
@@ -40,8 +41,9 @@
     font-family:'Fjalla One',sans-serif;
     color:#ffffff;
 }
+
 #titulo p{
-    color:#414042;
+    color:#58595b;
     font-family:avenir Next;
     font-size: 27px;
 }
@@ -78,15 +80,20 @@ button{
     color:#414042;
     font-family:avenir Next;
     font-size: 22px;
-    font-weight: 300;
+    font-weight: 400;
     margin: 1.5em;
     text-align: center;
 }
+
 #descubrir strong{
     color:#f59933;
+    font-style: italic;
+    font-weight: 300
 }
+
 #descubrir .tres p{
     font-size: 19px;
+    font-weight: 300;
     margin-right: 9em;
     text-align: justify;
 }
@@ -105,10 +112,6 @@ button{
     margin-top: -49em;
 }
 
-/*#seccion2 .container{
-    margin: 2em auto;
-    padding: 1em 1em;
-}*/
 #seccion2 h2{
     color:#f59933;
     font-size: 55px;
@@ -134,21 +137,25 @@ button{
 }
 
 #iconos{
-    margin-top: -29em;
+    margin-top: -24em;
+    margin-top: -24em;
+}
+
+.caja{
+    margin-bottom: 4em;
 }
 
 #iconos p{
     color:#414042;
     font-family:avenir Next; 
     font-size: 22px;
-    font-weight: 300;
+    font-weight: 400;
     margin: 24px 0px;
     text-align: center;
 }
 
-#iconos .box img{
+#iconos img{
     width: 22%;
-    margin-top: 3em;
 }
 
 
@@ -156,15 +163,6 @@ button{
     margin: 1em;
     margin-bottom: 3em;
 }
-
-
-#cta{
-	background: url(../images/moras.png);
-    background-size: cover;
-    margin: 0em auto;
-    padding: 9em;
-    margin-left: -3em;
-    }
 
 #cta button{
 	border: 0;
@@ -179,14 +177,17 @@ button{
     4px 4px 0px #5ba32c, 3px 3px 0px #5ba32c, 
     2px 2px 0px #5ba32c, 1px 1px 0px #5ba32c;
     padding: .3em 1em;
+    margin-left: auto;
+    margin-left: 2em;
+    margin-top: 0em;
     position: absolute;
-    margin-left: -1.5em;
 }
 
 button:hover{
     background-color:#75ce3c;
     color: #fff;
 }
+
 #cta button:hover{
     background-color:#75ce3c;
     color: #fff;
@@ -218,41 +219,192 @@ footer img{
     margin: 1.5em;
     width: 71%;
 }
+
 footer p{
     font-family: Source Sans Pro;
     font-size: 14px;
     font-weight: 300;
 }
 
+#taza{
+    background:url(../images/moras.png);
+    background-size:cover;
+    margin: -2em auto;
+    padding: 9em 0em;
+    margin-left: -4em;
+}
+
 /*Empieza Tablet*/
 
-@media only screen and (min-width:768px) {
+@media only screen and (min-width: 48em) {
 
-
-
-#limones{
-    padding: 36em 0em;
-    margin-left: -41em;
-    margin-top: -28em;
-}
-
-#seccion2{
-    margin-left: -13em;
-    margin-top: -24em;
-}
-
-#descubrir p{
-    text-align: justify;
-}
-
-#descubrir .tres p {
-    font-size: 26px;
-    text-align: center;
-    margin-right: 0em;
-}
-
-#naranjas img{
-    margin-left: -17em;
-    width: 68%
+    header #head #um {
+    width: 56%;
     }
+
+    header #head #umvirtual{
+        width: 56%;
+    }
+    
+    #titulo > section > div > h1{
+        font-size: 100px;
+    }
+
+    #titulo > section > div > p{
+        font-size: 33px;
+    }
+
+    #frase > div > p{
+        font-size: 36px;
+    }
+
+    #descubrir > div > div > div:nth-child(1)> p{
+        text-align: justify;
+        font-size: 24px;
+    }
+
+    #descubrir > div > div > div:nth-child(2) > p{
+        text-align: justify;
+        font-size: 24px;
+    }
+
+    #descubrir .tres > p{
+        font-size: 36px;
+        text-align: center;
+        margin: 1em;
+    }
+    
+    #limones{
+        padding-bottom: 37em;
+        margin-top: -25em;
+        margin-left: -40em
+    }
+
+    #seccion2{
+        margin-top: -24em;
+    }
+
+    #naranjas > section > img{   
+        transform: rotate(-31deg);
+        margin-left: -18em;
+        width: 80%;
+        margin-top: 6em;
+    }
+/*I C O N O S*/
+    #iconos{
+            margin-top: -59em;
+    }
+    #iconos > div > div > div:nth-child(1){
+            margin-bottom: 8em;
+    }
+
+    #iconos > div > div > div:nth-child(1) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
+            width: 37%;
+    }
+    #iconos > div > div > div:nth-child(1) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
+            text-align: initial;
+            margin-left: -3em;
+            font-size: 30px;
+    }
+
+
+    #iconos > div > div > div:nth-child(2){
+         margin-bottom: 8em;
+         margin-left: 10em;
+    }
+
+    #iconos > div > div > div:nth-child(2) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
+            width: 37%;
+    }
+
+   #iconos > div > div > div:nth-child(2) > div.col-xs-12.col-sm-7.center-xs.middle-sm.first-sm > div > p{
+             margin-left: 1em;
+             font-size: 30px;
+             text-align: right;
+    }
+    
+
+    #iconos > div > div > div:nth-child(3){
+         margin-bottom: 8em;
+    }
+
+    #iconos > div > div > div:nth-child(3) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
+            width: 37%;
+            margin-left: 3em;
+
+    }
+
+     #iconos > div > div > div:nth-child(3) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
+            text-align: initial;
+            margin-left: -1em;
+            font-size: 30px;
+    }
+
+
+    #iconos > div > div > div:nth-child(4){
+         margin-bottom: 8em;
+         margin-left: 9em;
+
+    }
+      #iconos > div > div > div:nth-child(4) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
+            width: 37%;
+    }
+
+
+        #iconos > div > div > div:nth-child(4) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
+            text-align: initial;
+            margin-left: -1em;
+            font-size: 30px;
+            text-align: right;
+    }
+    
+    #iconos > div > div > div:nth-child(5){
+         margin-bottom: 8em;
+    }
+
+    #iconos > div > div > div:nth-child(5) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
+            width: 37%;
+    }
+
+    #iconos > div > div > div:nth-child(5) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
+            text-align: initial;
+            margin-left: -3em;
+            font-size: 30px;
+
+    }
+/* FIN DE ICONOS*/
+
+    #taza{
+        margin: -5em auto;
+        padding: 14em 0em;
+        margin-left: 0em;
+    }
+
+      #cta > section > div > a > button{
+            margin-left: 6.5em;
+            border-radius: 1em;
+            font-size: 37px;
+            font-weight: 400;
+            padding: .8em .5em;
+            margin-top: -1em;
+    }
+
+
 }
+
+
+@media only screen and (min-width: 569px){
+
+    
+header #head #um {
+    width: 56%;
+}
+
+header #head #umvirtual{
+    width: 56%;
+}
+
+
+}
+
+
