--- a/css/style.css
+++ b/css/style.css
@@ -239,11 +239,11 @@ footer p{
 @media only screen and (min-width: 48em) {
 
     header #head #um {
-    width: 56%;
+    width: 70%;
     }
 
     header #head #umvirtual{
-        width: 56%;
+        width: 70%;
     }
     
     #titulo > section > div > h1{
@@ -314,7 +314,7 @@ footer p{
     }
 
     #iconos > div > div > div:nth-child(2) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
-            width: 37%;
+            width: 48%;
     }
 
    #iconos > div > div > div:nth-child(2) > div.col-xs-12.col-sm-7.center-xs.middle-sm.first-sm > div > p{
@@ -347,7 +347,7 @@ footer p{
 
     }
       #iconos > div > div > div:nth-child(4) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
-            width: 37%;
+            width: 48%;
     }
 
 
@@ -364,29 +364,31 @@ footer p{
 
     #iconos > div > div > div:nth-child(5) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
             width: 37%;
+            margin-left:3em;
     }
 
     #iconos > div > div > div:nth-child(5) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
             text-align: initial;
-            margin-left: -3em;
+            margin-left: -1em;
             font-size: 30px;
 
     }
 /* FIN DE ICONOS*/
 
+    #cta{
+        text-align: center;
+    }
+
     #taza{
-        margin: -5em auto;
-        padding: 14em 0em;
+        margin: -10em auto;
+        padding: 22em 0em;
         margin-left: 0em;
     }
 
       #cta > section > div > a > button{
-            margin-left: 6.5em;
             border-radius: 1em;
             font-size: 37px;
             font-weight: 400;
-            padding: .8em .5em;
-            margin-top: -1em;
     }
 
 
