--- a/css/style.css
+++ b/css/style.css
@@ -20,27 +20,20 @@
     margin: 0;
 }
 
+
 #head{
     position: absolute;
 }
 
-
-#um > img{
+.um > img{
      width: 68%;
 }
 
-#umvirtual > img{
+.umvirtual > img{
     width: 68%;
     margin: 1em;
 }
 
-osition: absolute;
-    }
-
-#logo{
-    width: 68%;
-    margin: .5em;
-}
 
 #titulo{
 	background: url(../images/Cabeza.jpg);
@@ -57,13 +50,15 @@ osition: absolute;
     font-weight: 300;
     font-family:'Fjalla One',sans-serif;
     color:#ffffff;
-    padding-top: 1em;
+    padding-top: 1.5em;
 }
 
 #titulo p{
     color:#58595b;
     font-family:avenir Next;
     font-size: 27px;
+    margin: -1.5em;
+    padding-bottom: 8em;
 }
 
 button{
@@ -79,7 +74,7 @@ button{
     box-shadow: 5px 5px 0px #5ba32c, 
     4px 4px 0px #5ba32c, 3px 3px 0px #5ba32c, 
     2px 2px 0px #5ba32c, 1px 1px 0px #5ba32c;
-    margin-top: 4em;
+    margin-top: -1em;
 }
 
 #frase p{
@@ -155,7 +150,6 @@ button{
 }
 
 #iconos{
-    margin-top: -24em;
     margin-top: -24em;
 }
 
@@ -257,23 +251,25 @@ footer p{
 @media only screen and (min-width: 48em) {
 
 
-    #um > img{
+    /*#um > img{
             width: 84%
     }
 
     #umvirtual > img{
-            padding-left: 24em;
+            padding-left: 164px;
             margin-top: -6em;
-            width: 43%;
-    }
+            width: 100%;
+    }*/
    
     
     #titulo > section > div > h1{
         font-size: 100px;
+        padding-top: 0em;
     }
 
     #titulo > section > div > p{
-        font-size: 33px;
+        font-size: 30px;
+        margin-top: -2em;
     }
 
     #frase > div > p{
@@ -333,12 +329,12 @@ footer p{
     #iconos > div > div > div:nth-child(1) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
             text-align: initial;
             margin-left: -3em;
-            font-size: 30px;
+            font-size: 24px;
     }
 
 
     #iconos > div > div > div:nth-child(2){
-         margin-bottom: 8em;
+         margin-bottom: 6em;
          margin-left: 10em;
     }
 
@@ -348,13 +344,13 @@ footer p{
 
    #iconos > div > div > div:nth-child(2) > div.col-xs-12.col-sm-7.center-xs.middle-sm.first-sm > div > p{
              margin-left: 1em;
-             font-size: 30px;
+             font-size: 24px;
              text-align: right;
     }
     
 
     #iconos > div > div > div:nth-child(3){
-         margin-bottom: 8em;
+         margin-bottom: 6em;
     }
 
     #iconos > div > div > div:nth-child(3) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
@@ -366,12 +362,12 @@ footer p{
      #iconos > div > div > div:nth-child(3) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
             text-align: initial;
             margin-left: -1em;
-            font-size: 30px;
+            font-size: 24px;
     }
 
 
     #iconos > div > div > div:nth-child(4){
-         margin-bottom: 8em;
+         margin-bottom: 6em;
          margin-left: 9em;
 
     }
@@ -383,12 +379,12 @@ footer p{
         #iconos > div > div > div:nth-child(4) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
             text-align: initial;
             margin-left: -1em;
-            font-size: 30px;
+            font-size: 24px;
             text-align: right;
     }
     
     #iconos > div > div > div:nth-child(5){
-         margin-bottom: 8em;
+         margin-bottom: 0em;
     }
 
     #iconos > div > div > div:nth-child(5) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
@@ -399,7 +395,7 @@ footer p{
     #iconos > div > div > div:nth-child(5) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
             text-align: initial;
             margin-left: -1em;
-            font-size: 30px;
+            font-size: 24px;
 
     }
 /* FIN DE ICONOS*/
@@ -425,26 +421,145 @@ footer p{
 }
 
 
-/*@media only screen and (min-width: 569px){
-
-    
-header #head #um {
-    width: 56%;
-}
-
-header #head #umvirtual{
-    width: 56%;
-}
-
-
-}*/
-
 @media only screen and (min-width: 1025px){
 
-    footer h2{
-        margin:2em;
+    #titulo > section > div > h1{
+        font-size: 136px;
+        padding-top: 0em;
     }
 
+    #titulo > section > div > p{
+            font-size: 39px;
+            margin-top: -2em;
+    }
+
+    #titulo > section > div > a > button{
+        font-size: 32px;
+    }
+
+    #frase > div > p{
+        font-size: 44px;
+    }
+
+    #descubrir > div > div > div:nth-child(1) > p{
+        font-size: 29px;
+    }
+
+    #descubrir > div > div > div:nth-child(2) > p{
+        font-size: 29px;
+    }
+
+    #limones{
+        padding-bottom: 37em;
+        margin-top: -23em;
+        margin-left: -25em;    
+    }
+
+    #seccion2{
+        margin-top: -32em;
+    }
+
+    #seccion2 > section > div > h2{
+        font-size: 67px;
+        margin-left: 0em; 
+        margin-bottom: 0em;
+        margin-top: 7em;
+    }
+
+    #seccion2 > section > div > p{
+        margin-top: 0em;
+    }
+
+    #naranjas{
+        display: none;
+    }
+
+    #iconos{
+            margin-top: 8em;
+    }
+
+     #iconos > div > div > div:nth-child(1){
+            margin-bottom: 8em;
+    }
+
+    #iconos > div > div > div:nth-child(1) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
+            width: 37%;
+    }
+    #iconos > div > div > div:nth-child(1) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
+            text-align: initial;
+            margin-left: -3em;
+            font-size: 24px;
+    }
+
+
+    #iconos > div > div > div:nth-child(2){
+         margin-bottom: 7em;
+         margin-left: 23em;
+    }
+
+    #iconos > div > div > div:nth-child(2) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
+            width: 48%;
+    }
+
+   #iconos > div > div > div:nth-child(2) > div.col-xs-12.col-sm-7.center-xs.middle-sm.first-sm > div > p{
+             margin-left: 0em;
+             font-size: 24px;
+             text-align: right;
+    }
+    
+
+    #iconos > div > div > div:nth-child(3){
+         margin-bottom: 6em;
+    }
+
+    #iconos > div > div > div:nth-child(3) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
+            width: 37%;
+            margin-left: 3em;
+
+    }
+
+     #iconos > div > div > div:nth-child(3) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
+            margin-left: -1em;
+            font-size: 24px;
+    }
+
+
+    #iconos > div > div > div:nth-child(4){
+         margin-bottom: 6em;
+         margin-left: 9em;
+
+    }
+      #iconos > div > div > div:nth-child(4) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
+            width: 48%;
+    }
+
+
+        #iconos > div > div > div:nth-child(4) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
+        
+            margin-left: -1em;
+            font-size: 24px;
+            text-align: right;
+    }
+    
+    #iconos > div > div > div:nth-child(5){
+         margin-bottom: 0em;
+    }
+
+    #iconos > div > div > div:nth-child(5) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
+            width: 37%;
+           
+    }
+
+    #iconos > div > div > div:nth-child(5) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
+            text-align: initial;
+            margin-left: -1em;
+            font-size: 24px;
+    /*FIN DE ICONOS*/
+
+    }
+      footer h2{
+        margin:2em;
+    }
 }
 
 
