--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,7 @@
     margin-right:0;
     margin-left: 0;
 }
-.body{
-    background:url(../images/madera.jpg);
-    margin: 0;
-}
+
 
 
 #head{
@@ -57,7 +54,6 @@
     color:#58595b;
     font-family:avenir Next;
     font-size: 27px;
-    margin: -1.5em;
     padding-bottom: 8em;
 }
 
@@ -249,17 +245,6 @@ footer p{
 /*Empieza Tablet*/
 
 @media only screen and (min-width: 48em) {
-
-
-    /*#um > img{
-            width: 84%
-    }
-
-    #umvirtual > img{
-            padding-left: 164px;
-            margin-top: -6em;
-            width: 100%;
-    }*/
    
     
     #titulo > section > div > h1{
@@ -342,7 +327,7 @@ footer p{
             width: 48%;
     }
 
-   #iconos > div > div > div:nth-child(2) > div.col-xs-12.col-sm-7.center-xs.middle-sm.first-sm > div > p{
+   #iconos > div > div > div:nth-child(2) > div.col-xs-12.col-sm-7.center-xs.middle-sm .first-sm > div > p{
              margin-left: 1em;
              font-size: 24px;
              text-align: right;
@@ -376,7 +361,7 @@ footer p{
     }
 
 
-        #iconos > div > div > div:nth-child(4) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
+        #iconos > div > div > div:nth-child(4) > div.col-xs-12.col-sm-7.center-xs.middle-sm .first-sm> div > p{
             text-align: initial;
             margin-left: -1em;
             font-size: 24px;
@@ -501,7 +486,7 @@ footer p{
             width: 48%;
     }
 
-   #iconos > div > div > div:nth-child(2) > div.col-xs-12.col-sm-7.center-xs.middle-sm.first-sm > div > p{
+   #iconos > div > div > div:nth-child(2) > div.col-xs-12.col-sm-7.center-xs.middle-sm .first-sm> div > p{
              margin-left: 0em;
              font-size: 24px;
              text-align: right;
@@ -534,7 +519,7 @@ footer p{
     }
 
 
-        #iconos > div > div > div:nth-child(4) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
+        #iconos > div > div > div:nth-child(4) > div.col-xs-12.col-sm-7.center-xs.middle-sm .first-sm> div > p{
         
             margin-left: -1em;
             font-size: 24px;
@@ -560,6 +545,19 @@ footer p{
       footer h2{
         margin:2em;
     }
+}
+
+
+@media only screen and (min-width: 1281em) {
+    body{
+    background:url(../images/madera.jpg);
+    margin: 0;
+    }
+
+    #limones {
+    margin-top: -12em;
+    margin-left: -9em;
+
 }
 
 
