--- a/css/style.css
+++ b/css/style.css
@@ -19,15 +19,15 @@
 
 
 #head{
-    position: absolute;
+    background-color:#f59933;
 }
 
 .um > img{
-     width: 68%;
+     width: 60%;
 }
 
 .umvirtual > img{
-    width: 68%;
+    width: 60%;
     margin: 1em;
 }
 
@@ -292,7 +292,8 @@ footer p{
         margin-left: 8em;
     }
 
-    #naranjas > section > img{   
+    #naranjas > section > img{ 
+        display: none;  
         transform: rotate(-31deg);
         margin-left: -18em;
         width: 80%;
@@ -302,7 +303,7 @@ footer p{
 
 /*I C O N O S*/
     #iconos{
-            margin-top: -59em;
+            margin-top: 5em;
     }
     #iconos > div > div > div:nth-child(1){
             margin-bottom: 8em;
@@ -313,34 +314,29 @@ footer p{
     }
     #iconos > div > div > div:nth-child(1) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
             text-align: initial;
-            margin-left: -3em;
             font-size: 24px;
     }
 
-
     #iconos > div > div > div:nth-child(2){
-         margin-bottom: 6em;
-         margin-left: 10em;
+         margin-bottom: 8em;
     }
 
     #iconos > div > div > div:nth-child(2) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
-            width: 48%;
+            width: 37%;
     }
 
-   #iconos > div > div > div:nth-child(2) > div.col-xs-12.col-sm-7.center-xs.middle-sm .first-sm > div > p{
-             margin-left: 1em;
+   #iconos > div > div > div:nth-child(2) > div.col-xs-12.col-sm-7.center-xs.middle-sm> div > p{
              font-size: 24px;
-             text-align: right;
+            text-align: initial;
     }
     
 
     #iconos > div > div > div:nth-child(3){
-         margin-bottom: 6em;
+         margin-bottom: 8em;
     }
 
     #iconos > div > div > div:nth-child(3) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
             width: 37%;
-            margin-left: 3em;
 
     }
 
@@ -352,29 +348,25 @@ footer p{
 
 
     #iconos > div > div > div:nth-child(4){
-         margin-bottom: 6em;
-         margin-left: 9em;
-
-    }
-      #iconos > div > div > div:nth-child(4) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
-            width: 48%;
+         margin-bottom:8em;
     }
 
+    #iconos > div > div > div:nth-child(4) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
+            width: 37%
+    }
 
-        #iconos > div > div > div:nth-child(4) > div.col-xs-12.col-sm-7.center-xs.middle-sm .first-sm> div > p{
+    #iconos > div > div > div:nth-child(4) > div.col-xs-12.col-sm-7.center-xs.middle-sm> div > p{
             text-align: initial;
             margin-left: -1em;
             font-size: 24px;
-            text-align: right;
     }
     
     #iconos > div > div > div:nth-child(5){
-         margin-bottom: 0em;
+         margin-bottom:8em;
     }
 
     #iconos > div > div > div:nth-child(5) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
             width: 37%;
-            margin-left:3em;
     }
 
     #iconos > div > div > div:nth-child(5) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
@@ -472,62 +464,62 @@ footer p{
     }
     #iconos > div > div > div:nth-child(1) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
             text-align: initial;
-            margin-left: -3em;
             font-size: 24px;
+            margin-left: 1.5px;
     }
 
 
     #iconos > div > div > div:nth-child(2){
-         margin-bottom: 7em;
-         margin-left: 23em;
+         margin-bottom: 8em;
     }
 
     #iconos > div > div > div:nth-child(2) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
-            width: 48%;
+            width: 37%;
     }
 
    #iconos > div > div > div:nth-child(2) > div.col-xs-12.col-sm-7.center-xs.middle-sm .first-sm> div > p{
-             margin-left: 0em;
+            margin-left: 1.5px;
              font-size: 24px;
              text-align: right;
     }
     
 
     #iconos > div > div > div:nth-child(3){
-         margin-bottom: 6em;
+         margin-bottom: 8em;
     }
 
     #iconos > div > div > div:nth-child(3) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
             width: 37%;
-            margin-left: 3em;
 
     }
 
+
      #iconos > div > div > div:nth-child(3) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
-            margin-left: -1em;
+            margin-left: 1.5px;
             font-size: 24px;
+            text-align: initial;
     }
 
 
     #iconos > div > div > div:nth-child(4){
-         margin-bottom: 6em;
-         margin-left: 9em;
+            margin-bottom: 8em;
 
     }
+
+
       #iconos > div > div > div:nth-child(4) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
-            width: 48%;
+            width: 37%;
     }
 
 
         #iconos > div > div > div:nth-child(4) > div.col-xs-12.col-sm-7.center-xs.middle-sm .first-sm> div > p{
-        
-            margin-left: -1em;
+           margin-left: 1.5px;
             font-size: 24px;
             text-align: right;
     }
     
     #iconos > div > div > div:nth-child(5){
-         margin-bottom: 0em;
+             margin-bottom: 0em;
     }
 
     #iconos > div > div > div:nth-child(5) > div.col-xs-12.col-sm-5.center-xs.middle-sm > div > img{
@@ -537,8 +529,8 @@ footer p{
 
     #iconos > div > div > div:nth-child(5) > div.col-xs-12.col-sm-7.center-xs.middle-sm > div > p{
             text-align: initial;
-            margin-left: -1em;
             font-size: 24px;
+            margin-left: 1.5px;
     /*FIN DE ICONOS*/
 
     }
@@ -555,8 +547,26 @@ footer p{
     }
 
     #limones {
-    margin-top: -12em;
-    margin-left: -9em;
+        padding-bottom: 37em;
+        margin-top: -21em;
+        margin-left: -14em;
+    }
+
+    #seccion2 > section > div > h2 {
+        font-size: 87px;
+        margin-left: 0em;
+        margin-bottom: 0em;
+        margin-top: 6em;
+    }
+
+    footer h2 {
+        margin: 2em;
+        font-size: 50px;  
+    }
+
+    footer p {
+        font-size: 19px
+    }
 
 }
 
