--- a/css/style.css
+++ b/css/style.css
@@ -658,10 +658,26 @@ footer p{
 
 
     footer h2 {
-        font-size:60px;
+    	margin-left: 2em;
+        font-size:65px;
    } 
+
+   	footer p{
+   		font-size: 24px;
+   	}
 
 
 }
 
+
+@media only screen and (min-width: 1921px) {
+
+	 footer h2 {
+        margin-left: 3.4em;
+    	font-size: 69px;
+   } 
+
+   	footer p{
+   		font-size: 24px;
+   	}
 
